@@ -5,24 +5,24 @@ Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.
 Uploaders: @GNOME_TEAM@
 Build-Depends: libpam0g-dev,
                libdbus-glib-1-dev (>= 0.30),
-	       libglib2.0-dev (>= 2.8.0),
-	       libgtk2.0-dev (>= 2.6.0),
-	       libpango1.0-dev (>= 1.3.0),
+               libglib2.0-dev (>= 2.8.0),
+               libgtk2.0-dev (>= 2.6.0),
+               libpango1.0-dev (>= 1.3.0),
                libglade2-dev (>= 1:1.99.2),
-	       libgnomecanvas2-dev,
+               libgnomecanvas2-dev,
                librsvg2-dev,
-	       libxml2-dev (>= 2.4.12),
-	       libart-2.0-dev (>= 2.3.11),
+               libxml2-dev (>= 2.4.12),
+               libart-2.0-dev (>= 2.3.11),
                libwrap0-dev,
                debhelper (>= 5),
                gettext,
                intltool (>= 0.35.0),
                libselinux1-dev [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64],
                libattr1-dev,
-	       x11proto-core-dev,
-	       x11proto-input-dev,
+               x11proto-core-dev,
+               x11proto-input-dev,
                libxau-dev,
-	       libxt-dev,
+               libxt-dev,
                libxdmcp-dev,
                libxinerama-dev,
                libdmx-dev,
